Parse Cmdargs in a Non-DRY Manner

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Switch to Pbr
 * Unignore Configuration File
 * Correctly Pass Cmd Args
 * Copy the Sample Config To /usr/local/etc
